# xmas-mode

./: README.md
Android App/XmasMode/app/: build.gradle
Android App/XmasMode/app/src/androidTest/java/com/apps/yuxco/xmasmode/: ExampleInstrumentedTest.kt
Android App/XmasMode/app/src/main/: AndroidManifest.xml
Android App/XmasMode/app/src/main/java/com/apps/yuxco/xmasmode/: Constants.kt  MainActivity.kt  PahoHelper.kt  ShoeDialog.kt
Android App/XmasMode/app/src/main/res/drawable/: ic_launcher_foreground.xml
Android App/XmasMode/app/src/main/res/layout/: activity_main.xml  content_main.xml
Android App/XmasMode/app/src/main/res/menu/: menu_main.xml
Android App/XmasMode/app/src/main/res/values/: colors.xml  strings.xml
Android App/XmasMode/app/src/main/res/values-es/: strings.xml
Android App/XmasMode/app/src/test/java/com/apps/yuxco/xmasmode/: ExampleUnitTest.kt
Android App/XmasMode/gradle/wrapper/: gradle-wrapper.properties
ESP8266 Sketch/xmas_mode_client/: xmas_mode_client.ino
Linux app/: .anjuta_sym_db.db  .gitignore  Makefile  Makefile.in  config.h  config.status  configure  configure.ac
Linux app/.anjuta/session/: anjuta.session  dock-layout.xml
Linux app/Optimized/: Makefile  config.status
Linux app/Optimized/src/: Makefile
Linux app/autom4te.cache/: output.0  requests  traces.0  traces.1
Linux app/src/: Makefile  Makefile.am  Makefile.in  xmas_mode.py  xmas_mode.py~  xmas_mode.ui
